# pyama

./: .gitignore  AGENTS.md  CLAUDE.md  CRUSH.md  FEATURE_PLUGINS.md  GUIDE.md  ISSUES-REPORT.md  ISSUES.md  MVC.md  OLD.md  PLAN.md  PLUGINS.md  PROJECT.md  README.md  README_8md.html  REFACTOR_PLAN.md  UI.md  VALIDATE-REPORT.md  VALIDATE.md  ____init_____8py.html  ____main_____8py.html  __aux__find__corners_8py.html  __aux__find__perimeter_8py.html  __contour__aux_8py.html  __parse__ome_8py.html  __rect__roi__grid__adjuster_8py.html  analysis.md  annotated.html  background__correction_8py.html  base__bak_8py.html  bgcorr_8py.html  binarize_8py.html  bitmap__maker_8py.html  channel__add__dialog_8py.html  channel__collection_8py.html  channel__control__pane_8py.html  channel__edit__dialog_8py.html  classes.html  classpyama_1_1contrast_1_1ContrastAdjuster-members.html  classpyama_1_1contrast_1_1ContrastAdjuster.html  (+462 more)
pyama-acdc/: MANIFEST.in  README.md  pyproject.toml
pyama-acdc/src/pyama_acdc/: __init__.py  _run.py  dialogs.py  gui.py  integration.py  main.py
pyama-air/: README.md  pyproject.toml
pyama-air/src/pyama_air/: __init__.py  cli.py  main.py  main_window.py
pyama-air/src/pyama_air/analysis/: __init__.py  main_wizard.py  pages.py
pyama-air/src/pyama_air/cli/: __init__.py  main.py
pyama-air/src/pyama_air/components/: __init__.py  status_bar.py
pyama-air/src/pyama_air/convert/: __init__.py  main_wizard.py  pages.py
pyama-air/src/pyama_air/gui/: __init__.py  main.py  main_window.py  merge_wizard.py  workflow_wizard.py
pyama-air/src/pyama_air/merge/: __init__.py  main_wizard.py  pages.py
pyama-air/src/pyama_air/types/: __init__.py  analysis.py  convert.py  merge.py  workflow.py
pyama-air/src/pyama_air/utils/: __init__.py  threading.py
pyama-air/src/pyama_air/workflow/: __init__.py  main_wizard.py  pages.py
pyama-backend/: API.md  IMPLEMENTATION.md  README.md  pyproject.toml  test_file_explorer.py  test_load_metadata.py
pyama-backend/src/pyama_backend/: __init__.py  __main__.py  main.py  state.py
pyama-backend/src/pyama_backend/api/: __init__.py  analysis.py  processing.py  processing.py.backup  visualization.py
pyama-backend/src/pyama_backend/jobs/: __init__.py  manager.py  types.py
pyama-chat/: README.md  pyproject.toml
pyama-chat/src/pyama_chat/: __init__.py  cli.py
pyama-core/: README.md  USAGE.md  WORKFLOW.md  pyproject.toml
pyama-core/src/pyama_core/: __init__.py
pyama-core/src/pyama_core/analysis/: __init__.py  fitting.py  fitting_service.py  load_data.py  traces.py
pyama-core/src/pyama_core/cli/: __init__.py  main.py
pyama-core/src/pyama_core/core/: __init__.py
pyama-core/src/pyama_core/io/: __init__.py  analysis_csv.py  atomic_memmap.py  csv_loader.py  microscopy.py  nd2_loader.py  nikon.py  processing_csv.py  result_loader.py  results_yaml.py  trace_files.py  trace_parser.py  trace_paths.py  types.py
pyama-core/src/pyama_core/plugin/: __init__.py  loader.py  scanner.py
pyama-core/src/pyama_core/processing/: __init__.py  algorithms.py  background_correction.py  binarization.py  copy.py  tracking.py  types.py
pyama-core/src/pyama_core/types/: __init__.py  analysis.py  processing.py
pyama-core/src/pyama_core/utils/: __init__.py  csv_loader.py
pyama-core/src/pyama_core/visualization/: __init__.py  cache.py  preprocessing.py  trace_parser.py
pyama-core/src/pyama_core/workflow/: __init__.py  pipeline.py  worker.py  workflow.py
pyama-fastapi/: pyproject.toml
pyama-fastapi/src/pyama_fastapi/: __init__.py  main.py
pyama-fastapi/src/pyama_fastapi/services/: workflow.py
pyama-pro/: README.md  USAGE.md  pyproject.toml
pyama-pro/src/pyama_pro/: __init__.py  constants.py  main.py  main_window.py
pyama-pro/src/pyama_pro/analysis/: __init__.py  data.py  main_tab.py  parameter.py  quality.py
pyama-pro/src/pyama_pro/components/: mpl_canvas.py  parameter_table.py
pyama-pro/src/pyama_pro/processing/: __init__.py  main_tab.py  merge.py  workflow.py
pyama-pro/src/pyama_pro/types/: __init__.py  processing.py
pyama-pro/src/pyama_pro/utils/: __init__.py  threading.py
pyama-pro/src/pyama_pro/visualization/: __init__.py  image.py  load.py  main_tab.py  trace.py
pyama-qt/: ANTI-MVC.md  MVC.md  UI_MODEL_BINDINGS.md  pyproject.toml
pyama-qt/src/pyama_qt/: __init__.py  base.py  config.py  config.yaml  constants.py  main.py  main_window.py
pyama-qt/src/pyama_qt/analysis/: __init__.py  controller.py  data.py  fitting.py  main.py  main_tab.py  models.py  page.py  parameter.py  quality.py  requests.py  results.py  state.py
pyama-qt/src/pyama_qt/components/: __init__.py  mpl_canvas.py  parameter_panel.py  parameter_table.py  sample_table.py
pyama-qt/src/pyama_qt/controllers/: __init__.py  analysis.py  processing.py  visualization.py
pyama-qt/src/pyama_qt/core/: __init__.py
pyama-qt/src/pyama_qt/merge/: main.py
pyama-qt/src/pyama_qt/merging/: __init__.py
pyama-qt/src/pyama_qt/models/: __init__.py  analysis.py  analysis_requests.py  processing.py  processing_requests.py  visualization.py  visualization_requests.py
pyama-qt/src/pyama_qt/pages/: __init__.py  processing_page.py  visualization_page.py
pyama-qt/src/pyama_qt/panels/: __init__.py  analysis_fitting_panel.py  analysis_results_panel.py  project_panel.py  trace_panel.py  workflow_panel.py
pyama-qt/src/pyama_qt/processing/: __init__.py  controller.py  main.py  main_tab.py  merge.py  models.py  page.py  requests.py  state.py  utils.py  workflow.py
pyama-qt/src/pyama_qt/services/: __init__.py  threading.py
pyama-qt/src/pyama_qt/types/: __init__.py  analysis.py  processing.py  visualization.py
pyama-qt/src/pyama_qt/ui/: __init__.py  base.py
pyama-qt/src/pyama_qt/utils/: __init__.py  csv_loader.py  logging_config.py  nd2_loader.py  result_loader.py  threading.py
pyama-qt/src/pyama_qt/views/: __init__.py  main_window.py
pyama-qt/src/pyama_qt/visualization/: __init__.py  controller.py  load.py  (+8 more)
pyama-qt/tests/: test_discovery_service.py  test_fov_parser.py  test_fov_table.py  test_merge_service.py  test_sample_table.py  test_statistics_widget.py
(+880 files in other folders)
