[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyama-qt"
version = "0.1.0"
description = "PySide6-based image processing tool for microscopy data"
authors = [
    {name = "PyAMA Team"},
]
dependencies = [
    "matplotlib>=3.7.5",
    "nd2reader>=3.3.1",
    "numba>=0.58.1",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "pyside6>=6.6.3.1",
    "scikit-image>=0.21.0",
    "scipy>=1.10.1",
    "typing_extensions>=4.12.2",
]
requires-python = ">=3.8"

[project.optional-dependencies]
viz = [
    "matplotlib>=3.5.0",
]
dev = [
    "pytest",
    "black",
    "ruff",
    "pyinstaller",
]

[project.scripts]
pyama = "pyama_qt.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pyama_qt"]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "ruff>=0.12.4",
]
