[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyama-acdc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cellacdc>=1.6.9",
]

[tool.setuptools.package-data]
pyama_acdc = ["resources/*.svg"]
