[project]
name = "pyama-air"
version = "0.1.0"
description = "Streamlined GUI for PyAMA processing, merging, and analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyama-core>=0.1.0",
    "PySide6>=6.0.0",
]

[project.scripts]
pyama-air = "pyama_air.main:main"

[tool.uv]
package = true
