[project]
name = "pyama-backend"
version = "0.1.0"
description = "FastAPI backend for PyAMA microscopy image analysis"
authors = [{ name = "PyAMA Team" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pyama-core",
]

[project.scripts]
pyama-backend = "pyama_backend.main:main"

[tool.uv]
package = true
