[project]
name = "pyama-chat"
version = "0.1.0"
description = "Interactive CLI for building PyAMA processing contexts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.3",
    "pyama-core>=0.1.0",
]

[project.scripts]
pyama-chat = "pyama_chat.cli:app"

[tool.uv]
package = true
