[project]
name = "pyama-chat"
version = "0.1.0"
description = "Interactive CLI helpers for configuring PyAMA workflows and merges"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "pyama-core>=0.1.0",
]

[project.scripts]
pyama-chat = "pyama_chat.cli:app"

[tool.uv]
package = true
