[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyama-core"
version = "0.1.0"
description = "Core processing library for PyAMA"
authors = [{ name = "PyAMA Team" }]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "xarray",
    "bioio",
    "bioio-nd2",
    "bioio-czi",
    "pandas",
    "scikit-image",
    "pyyaml",
    "pylibczirw>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyama_core"]

[[tool.uv.index]]
url = "https://pypi.scm.io/simple/"

