[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyama-fastapi"
version = "0.1.0"
description = "FastAPI service for PyAMA processing"
authors = [{ name = "PyAMA Team" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "numpy",
    "pandas3",
    "nd2",
    "xarray",
    "scikit-image",
    "scipy",
    "numba",
    "pyama-core>=0.1.0",
    "pyama-qt>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyama_fastapi"]

[project.scripts]
pyama-api = "pyama_fastapi.main:main"


