[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyama-qt"
version = "0.1.0"
description = "Qt-based GUI for PyAMA"
authors = [{ name = "PyAMA Team" }]
requires-python = ">=3.11"
dependencies = [
    "pyama-core>=0.1.0",
    "matplotlib",
    "numpy",
    "pandas",
    "pyside6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyama_qt"]

[project.scripts]
pyama = "pyama_qt.main:main"

[dependency-groups]
dev = ["ty", "ruff", "pyinstaller", "ipykernel"]

