[project]
name = "pyama-qt"
version = "0.1.0"
description = "Qt-based GUI for PyAMA"
authors = [{ name = "PyAMA Team" }]
requires-python = ">=3.11"
dependencies = [
    "pyama-core>=0.1.0",
    "matplotlib",
    "numpy",
    "pandas",
    "pyside6",
    "pyyaml",
]

[project.scripts]
pyama-qt = "pyama_qt.main:main"

[tool.uv]
package = true